--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/bloxy/widgets.git"
+    "url": "https://github.com/bitquery/widgets"
   },
   "keywords": ["bitquery", "widgets"],
   "author": "BitQuery. Stepanov Andrey",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/bloxy/widgets#readme",
+  "homepage": "https://github.com/bitquery/widgets#readme",
   "devDependencies": {
     "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
