--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "widgets",
-  "version": "1.0.10",
+  "version": "1.0.54",
   "description": "",
   "main": "dist/widgets.js",
   "directories": {
@@ -14,22 +14,27 @@
     "type": "git",
     "url": "https://github.com/bitquery/widgets"
   },
-  "keywords": ["bitquery", "widgets"],
+  "keywords": [
+    "bitquery",
+    "widgets"
+  ],
   "author": "BitQuery. Stepanov Andrey",
   "license": "ISC",
   "homepage": "https://github.com/bitquery/widgets#readme",
   "devDependencies": {
     "css-loader": "^3.2.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
-    "node-sass": "^4.13.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
+    "terser-webpack-plugin": "^2.3.4",
     "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.10",
-    "vue-template-loader": "^1.0.0"
+    "vue-template-loader": "^1.0.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "apollo-boost": "^0.4.4",
