--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "widgets",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "",
   "main": "dist/widgets.js",
   "directories": {
@@ -41,11 +41,11 @@
     "graphiql": "^0.16.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "numeral": "^2.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "vis": "^4.21.0-EOL",
     "vue": "^2.6.10",
     "vue-google-charts": "^0.3.2",
     "vue-i18n": "^8.15.0"
