--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "widgets",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "",
   "main": "dist/widgets.js",
   "directories": {
@@ -25,7 +25,7 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
@@ -43,6 +43,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "numeral": "^2.0.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
