--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "widgets",
-  "version": "1.3.14",
-  "description": "Blockchain Visualization Widgets ============",
+  "version": "1.3.17",
+  "description": "Blockchain Visualization Widgets",
   "main": "dist/widgets.js",
   "directories": {
     "doc": "doc"
